openmetadata-docs/content/v0.13.4/main-concepts/metadata-standard/schemas/api/services/createMlModelService.md
---
title: createMlModelService
slug: /main-concepts/metadata-standard/schemas/api/services/createmlmodelservice
---

# CreateMlModelServiceRequest

*Create MlModel service entity request*

## Properties

- **`name`**: Name that identifies the this entity instance uniquely. Refer to *../../type/basic.json#/definitions/entityName*.
- **`displayName`** *(string)*: Display Name that identifies this mlModel service.
- **`description`**: Description of mlModel service entity. Refer to *../../type/basic.json#/definitions/markdown*.
- **`serviceType`**: Refer to *../../entity/services/mlmodelService.json#/definitions/mlModelServiceType*.
- **`connection`**: Refer to *../../entity/services/mlmodelService.json#/definitions/mlModelConnection*.
- **`tags`** *(array)*: Tags for this MlModel Service. Default: `None`.
  - **Items**: Refer to *../../type/tagLabel.json*.
- **`owner`**: Owner of this mlModel service. Refer to *../../type/entityReference.json*.


Documentation file automatically generated at 2023-04-13 23:17:03.893190.
